Fix: dropdown arrow jumps when geoIpLookup completes

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -346,7 +346,8 @@
 }
 
 .iti__flag {
-  --iti-flag-offset: 0px;
+  //* Start with an offset to hide any flags. This is useful to show an empty state (with correct dimensions) while geoIpLookup is loading.
+  --iti-flag-offset: 100px;
   --iti-flag-width: #{$most-common-flag-width};
   --iti-flag-height: #{$most-common-flag-height};
 
